K8S/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/osminogka/frontend:latest

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 80
