K8S/mssql-auth-depl.yaml
# Secret creation command (make sure it is already applied)
# kubectl create secret generic mssql-secret --from-literal=SA_PASSWORD='Password123!'

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-auth
  template:
    metadata:
      labels:
        app: mssql-auth
    spec:
      containers:
        - name: mssql-auth
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb-auth
      volumes:
      - name: mssqldb-auth
        persistentVolumeClaim:
          claimName: mssql-claim-auth

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-auth
  ports:
  - name: mssql-auth
    protocol: TCP
    port: 1433
    targetPort: 1433

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer-auth
spec:
  type: LoadBalancer
  selector:
    app: mssql-auth
  ports:
  - protocol: TCP
    port: 1435
    targetPort: 1433
