K8S/mssql-core-depl.yaml
# Secret creation command (make sure it is already applied)
# kubectl create secret generic mssql-secret --from-literal=SA_PASSWORD='Password123!'

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-core-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-core
  template:
    metadata:
      labels:
        app: mssql-core
    spec:
      containers:
        - name: mssql-core
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb-core
      volumes:
      - name: mssqldb-core
        persistentVolumeClaim:
          claimName: mssql-claim-core

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-core-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-core
  ports:
  - name: mssql-core
    protocol: TCP
    port: 1433
    targetPort: 1433

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer-core
spec:
  type: LoadBalancer
  selector:
    app: mssql-core
  ports:
  - protocol: TCP
    port: 1434
    targetPort: 1433
