K8S/mssql-forums-depl.yaml
# Secret creation command (make sure it is already applied)
# kubectl create secret generic mssql-secret --from-literal=SA_PASSWORD='Password123!'

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-forums-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-forums
  template:
    metadata:
      labels:
        app: mssql-forums
    spec:
      containers:
        - name: mssql-forums
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mssqldb-forums
      volumes:
      - name: mssqldb-forums
        persistentVolumeClaim:
          claimName: mssql-claim-forums

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-forums-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-forums
  ports:
  - name: mssql-forums
    protocol: TCP
    port: 1433
    targetPort: 1433

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer-forums
spec:
  type: LoadBalancer
  selector:
    app: mssql-forums
  ports:
  - protocol: TCP
    port: 1436
    targetPort: 1433
