K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/a
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 80
          - path: /api/u
            pathType: Prefix
            backend:
              service:
                name: core-clusterip-srv
                port:
                  number: 80
          - path: /api/c
            pathType: Prefix
            backend:
              service:
                name: courses-clusterip-srv
                port:
                  number: 80
          - path: /api/f
            pathType: Prefix
            backend:
              service:
                name: forums-clusterip-srv
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip-srv
                port:
                  number: 80
